--- a/index.html
+++ b/index.html
@@ -399,10 +399,10 @@
     <script>
         // Category images
         const categoryImages = {
-            Drinks: '/images/drinks/cola.png',
-            Sweets: '/images/sweets.png',
-            Pizzas: '/images/pizzas/margherita.png',
-            burgers: '/images/burgers/classic.png',
+            Drinks: 'images/drinks/cola.png',
+            Sweets: 'images/sweets.png',
+            Pizzas: 'images/pizzas/margherita.png',
+            burgers: 'images/burgers/classic.png',
         };
 
         // Extract categories from data
