--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
             if (filteredItems.length === 0) {
                 const notFound = document.createElement('div');
                 notFound.className = 'not-found';
-                notFound.textContent = '❌ Topilmadi';
+                notFound.textContent = 'Topilmadi';
                 cardsGrid.appendChild(notFound);
                 return;
             }
