--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             width: 100%;
             max-width: 550px;
             margin: 0 auto;
-            height: 100vh;
+            height: 100dvh;
             font-family: system-ui, sans-serif;
             animation: modalSlideUp 2s ease;
 
