--- a/index.html
+++ b/index.html
@@ -282,14 +282,14 @@
 
         .modal-content {
             position: relative;
-            background: rgba(255, 255, 255, 0.9);
-            backdrop-filter: blur(12px);
+            background: rgba(255, 255, 255);
             left: 0;
             top: 0;
+            bottom:  0;
             width: 100%;
             max-width: 550px;
             margin: 0 auto;
-            height: 100dvh;
+            height: 100lvh;
             font-family: system-ui, sans-serif;
             animation: modalSlideUp 2s ease;
 
