--- a/index.html
+++ b/index.html
@@ -49,15 +49,17 @@
 
         nav .navItem{
             color: #fff;
+            font-weight: bold;
             padding: 2px 10px;
-            background: #57575752;
+            background: #c90000;
             margin-left: 3%;
             border-radius: 15px;
             transition: all .6s;
+            text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.342);
         }
         .navItemsActive{
            transform: scale(1.1);
-           border: 1px solid black ;
+           border: 1px solid rgb(104, 104, 104) ;
         }
 
         header {
@@ -106,6 +108,9 @@
             width: 25px;
             height: 25px;
             border-radius: 50%;
+        }
+        .search-button i{
+            color: #c90000;
         }
 
         .logo {
@@ -167,10 +172,10 @@
 
         .carousel-item {
             height: 150px;
-            flex: 0 0 80%;
+            flex: 0 0 85%;
             border-radius: 25px;
             scroll-snap-align: center;
-            transition: all 0.7s ease;
+            transition: all 0.4s ease;
             display: flex;
             position: relative;
             overflow: hidden;
@@ -810,7 +815,7 @@
                 });
             }, {
                 root: carousel,
-                threshold: 0.9
+                threshold: 1
             });
 
             const items = carousel.querySelectorAll('.carousel-item');
