--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
             color: #fff;
             font-weight: bold;
             padding: 2px 10px;
-            background: #c90000;
+            background: #e0ac00;
             margin-left: 3%;
             border-radius: 15px;
             transition: all .6s;
-            text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.342);
+            text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.473);
         }
-        .navItemsActive{
+        .navItem.navItemsActive{
            transform: scale(1.1);
-           border: 1px solid rgb(104, 104, 104) ;
+           background-color: #c90000;
+        
         }
 
         header {
@@ -175,7 +176,7 @@
             flex: 0 0 85%;
             border-radius: 25px;
             scroll-snap-align: center;
-            transition: all 0.4s ease;
+            transition: all 0.6s ease;
             display: flex;
             position: relative;
             overflow: hidden;
@@ -184,7 +185,7 @@
         }
 
         .carousel-item.active {
-            height: 170px;
+            height: 180px;
             
             font-weight: bold;
         }
@@ -815,7 +816,7 @@
                 });
             }, {
                 root: carousel,
-                threshold: 1
+                threshold: 1.
             });
 
             const items = carousel.querySelectorAll('.carousel-item');
