--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             color: #fff;
             font-weight: bold;
             padding: 2px 10px;
-            background: #e0ac00;
+            background: #969696;
             margin-left: 3%;
             border-radius: 15px;
-            transition: all .6s;
-            text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.473);
+            transition: all .9s;
+            text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.233);
         }
         .navItem.navItemsActive{
            transform: scale(1.1);
@@ -186,7 +186,7 @@
 
         .carousel-item.active {
             height: 180px;
-            
+
             font-weight: bold;
         }
 
