--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
             width: 100%;
             overflow-x: auto;
             scroll-snap-type: x mandatory;
-            scroll-behavior: smooth;
             gap: 25px;
             padding: 0 3%;
             margin: 0 auto;
@@ -176,7 +175,7 @@
             flex: 0 0 85%;
             border-radius: 25px;
             scroll-snap-align: center;
-            transition: all 0.6s ease;
+            transition: all 0.6s;
             display: flex;
             position: relative;
             overflow: hidden;
@@ -186,7 +185,6 @@
 
         .carousel-item.active {
             height: 180px;
-
             font-weight: bold;
         }
 
