--- a/index.html
+++ b/index.html
@@ -210,7 +210,6 @@
             width: 100%;
             overflow-x: auto;
             scroll-snap-type: x mandatory;
-            gap: 25px;
             padding: 0 3%;
             margin: 0 auto;
         }
@@ -229,6 +228,7 @@
             overflow: hidden;
             font-weight: normal;
             box-shadow: 3px 5px 15px 2px rgba(38, 38, 38, 0.39);
+            margin: 0 3%;
         }
 
         .carousel-item img {
@@ -527,6 +527,7 @@
             height: 150px;
             flex: 0 0 75%;
             border-radius: 20px;
+            margin: 3%;
         }
 
         /* Not Found Message */
